// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component QuickTokenRefill renders correctly when isUserLoggedIn 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
>
  <Modal
    animationType="none"
    hardwareAccelerated={false}
    hideModalContentWhileAnimating={false}
    onModalHide={[Function]}
    onModalWillHide={[Function]}
    onModalWillShow={[Function]}
    onRequestClose={[Function]}
    scrollHorizontal={false}
    scrollOffset={0}
    scrollOffsetMax={0}
    scrollTo={null}
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    swipeThreshold={100}
    transparent={true}
    visible={true}
  >
    <View
      accessible={true}
      focusable={true}
      forwardedRef={[Function]}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "black",
          "bottom": 0,
          "height": 1334,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": 750,
        }
      }
    />
    <View
      forwardedRef={[Function]}
      hideModalContentWhileAnimating={false}
      onModalHide={[Function]}
      onModalWillHide={[Function]}
      onModalWillShow={[Function]}
      pointerEvents="box-none"
      scrollHorizontal={false}
      scrollOffset={0}
      scrollOffsetMax={0}
      scrollTo={null}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(34,34,34, 0.6)",
          "flex": 1,
          "justifyContent": "center",
          "margin": 37.5,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "transform": Array [
            Object {
              "translateY": 1334,
            },
          ],
        }
      }
      supportedOrientations={
        Array [
          "portrait",
          "landscape",
        ]
      }
      swipeThreshold={100}
    >
      <View
        accessible={true}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 12,
            "left": 12,
            "right": 12,
            "top": 12,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "marginLeft": 24,
            "marginTop": 48,
            "opacity": 1,
            "position": "absolute",
            "right": 30,
            "top": -40,
            "zIndex": 1,
          }
        }
        testID="exit-circle"
      >
        <Image
          opacity={1}
          resizeMode="contain"
          size={30}
          source={1}
          style={
            Array [
              Object {
                "height": 45,
                "width": 45,
              },
            ]
          }
        />
      </View>
      <BVLinearGradient
        colors={
          Array [
            4283239667,
            4283047829,
          ]
        }
        endPoint={
          Object {
            "x": 0.5,
            "y": 1,
          }
        }
        locations={null}
        onLayout={[Function]}
        startPoint={
          Object {
            "x": 0.5,
            "y": 0,
          }
        }
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderColor": "#FFFFFF",
              "borderRadius": 15,
              "borderWidth": 5,
              "marginTop": 40,
              "shadowColor": "rgba(53, 53, 53, 0.3)",
              "shadowOffset": Object {
                "height": 4,
                "width": 4,
              },
              "shadowOpacity": 1,
              "shadowRadius": 2,
              "width": "85%",
              "zIndex": -1,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "flexDirection": "column",
                "marginVertical": 60,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignSelf": "center",
                  "flexDirection": "column",
                  "width": "95%",
                },
              ]
            }
          >
            <Text
              alignCenter={true}
              allowFontScaling={true}
              color="#FFFFFF"
              fontFamily="BOLD"
              isUnderlined={false}
              isUppercase={false}
              maxFontSizeMultiplier={1.3}
              size="XXLARGE"
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "CalibreBold",
                    "fontSize": 48,
                    "justifyContent": "center",
                    "textAlign": "center",
                    "textDecorationColor": "#FFFFFF",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginVertical": 15,
                  },
                ]
              }
            >
              QUICK TOKEN REFILL
            </Text>
            <Text
              alignCenter={true}
              allowFontScaling={true}
              color="#FFFFFF"
              fontFamily="BOLD"
              isUnderlined={false}
              isUppercase={false}
              maxFontSizeMultiplier={1.3}
              size="SMALL"
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "CalibreBold",
                    "fontSize": 27,
                    "justifyContent": "center",
                    "textAlign": "center",
                    "textDecorationColor": "#FFFFFF",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginVertical": 15,
                  },
                ]
              }
            >
              Refill your tokens without losing your spot in line!
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "height": 600,
                },
              ]
            }
          >
            <RCTScrollView
              contentContainerStyle={
                Object {
                  "paddingBottom": 32,
                }
              }
              data={null}
              disableVirtualization={false}
              getItem={[Function]}
              getItemCount={[Function]}
              horizontal={false}
              initialNumToRender={4}
              keyExtractor={[Function]}
              maxToRenderPerBatch={10}
              onContentSizeChange={[Function]}
              onEndReachedThreshold={2}
              onLayout={[Function]}
              onMomentumScrollEnd={[Function]}
              onScroll={[Function]}
              onScrollBeginDrag={[Function]}
              onScrollEndDrag={[Function]}
              removeClippedSubviews={false}
              renderItem={[Function]}
              scrollEventThrottle={50}
              stickyHeaderIndices={Array []}
              updateCellsBatchingPeriod={50}
              viewabilityConfigCallbackPairs={Array []}
              windowSize={21}
            >
              <View />
            </RCTScrollView>
          </View>
          <Text
            alignCenter={true}
            allowFontScaling={true}
            color="#FFFFFF"
            fontFamily="BOLD"
            isUnderlined={false}
            isUppercase={false}
            maxFontSizeMultiplier={1.3}
            size="SMALL"
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontFamily": "CalibreBold",
                  "fontSize": 27,
                  "justifyContent": "center",
                  "textAlign": "center",
                  "textDecorationColor": "#FFFFFF",
                  "textDecorationLine": "none",
                  "textDecorationStyle": "solid",
                  "textTransform": "none",
                },
                Object {
                  "marginVertical": 15,
                },
              ]
            }
          >
            Want to purchase a different pack?
          </Text>
          <View
            onLayout={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                  "marginHorizontal": 10,
                  "marginVertical": 10,
                },
              ]
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgba(96,202,142,1)",
                  "borderRadius": 88,
                  "height": 100,
                  "justifyContent": "center",
                  "marginTop": 0,
                  "opacity": 1,
                  "width": 500,
                }
              }
              testID="quick-token-store-button"
            >
              <View
                borderRadius={44}
                colorScheme="rgba(128,229,173,1)"
                height={50}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "rgba(128,229,173,1)",
                      "borderRadius": 88,
                      "height": 90,
                      "justifyContent": "center",
                      "width": 494,
                    },
                  ]
                }
                width={250}
              >
                <View
                  borderRadius={44}
                  colorScheme="rgba(114,213,158,1)"
                  height={50}
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "rgba(114,213,158,1)",
                        "borderRadius": 108,
                        "height": 86,
                        "justifyContent": "center",
                        "marginTop": 8,
                        "width": 494,
                      },
                    ]
                  }
                  width={250}
                >
                  <View
                    style={
                      Array [
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "justifyContent": "center",
                        },
                      ]
                    }
                  >
                    <Text
                      alignCenter={false}
                      allowFontScaling={true}
                      color="#FFFFFF"
                      fontFamily="MEDIUM"
                      isUnderlined={false}
                      isUppercase={false}
                      maxFontSizeMultiplier={1.3}
                      size="NORMAL"
                      style={
                        Array [
                          Object {
                            "color": "#FFFFFF",
                            "fontFamily": "Calibre-Medium",
                            "fontSize": 30,
                            "justifyContent": "center",
                            "textAlign": "left",
                            "textDecorationColor": "#FFFFFF",
                            "textDecorationLine": "none",
                            "textDecorationStyle": "solid",
                            "textTransform": "none",
                          },
                          Object {
                            "marginTop": 14,
                          },
                        ]
                      }
                    >
                      Head To Token Store
                    </Text>
                    <Image
                      source={1}
                      style={
                        Array [
                          Object {
                            "height": 40,
                            "marginLeft": 7.5,
                            "width": 40,
                          },
                        ]
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </BVLinearGradient>
    </View>
  </Modal>
</RCTSafeAreaView>
`;

exports[`Component QuickTokenRefill renders correctly when isVisible={false} 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
>
  <Modal
    animationType="none"
    hardwareAccelerated={false}
    hideModalContentWhileAnimating={false}
    onModalHide={[Function]}
    onModalWillHide={[Function]}
    onModalWillShow={[Function]}
    onRequestClose={[Function]}
    scrollHorizontal={false}
    scrollOffset={0}
    scrollOffsetMax={0}
    scrollTo={null}
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    swipeThreshold={100}
    transparent={true}
    visible={false}
  >
    <View
      accessible={true}
      focusable={true}
      forwardedRef={[Function]}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "black",
          "bottom": 0,
          "height": 1334,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": 750,
        }
      }
    />
    <View
      forwardedRef={[Function]}
      hideModalContentWhileAnimating={false}
      onModalHide={[Function]}
      onModalWillHide={[Function]}
      onModalWillShow={[Function]}
      pointerEvents="box-none"
      scrollHorizontal={false}
      scrollOffset={0}
      scrollOffsetMax={0}
      scrollTo={null}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(34,34,34, 0.6)",
          "flex": 1,
          "justifyContent": "center",
          "margin": 37.5,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "transform": Array [
            Object {
              "translateY": 0,
            },
          ],
        }
      }
      supportedOrientations={
        Array [
          "portrait",
          "landscape",
        ]
      }
      swipeThreshold={100}
    >
      <View
        accessible={true}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 12,
            "left": 12,
            "right": 12,
            "top": 12,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "marginLeft": 24,
            "marginTop": 48,
            "opacity": 1,
            "position": "absolute",
            "right": 30,
            "top": -40,
            "zIndex": 1,
          }
        }
        testID="exit-circle"
      >
        <Image
          opacity={1}
          resizeMode="contain"
          size={30}
          source={1}
          style={
            Array [
              Object {
                "height": 45,
                "width": 45,
              },
            ]
          }
        />
      </View>
      <BVLinearGradient
        colors={
          Array [
            4283239667,
            4283047829,
          ]
        }
        endPoint={
          Object {
            "x": 0.5,
            "y": 1,
          }
        }
        locations={null}
        onLayout={[Function]}
        startPoint={
          Object {
            "x": 0.5,
            "y": 0,
          }
        }
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderColor": "#FFFFFF",
              "borderRadius": 15,
              "borderWidth": 5,
              "marginTop": 40,
              "shadowColor": "rgba(53, 53, 53, 0.3)",
              "shadowOffset": Object {
                "height": 4,
                "width": 4,
              },
              "shadowOpacity": 1,
              "shadowRadius": 2,
              "width": "85%",
              "zIndex": -1,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "flexDirection": "column",
                "marginVertical": 60,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignSelf": "center",
                  "flexDirection": "column",
                  "width": "95%",
                },
              ]
            }
          >
            <Text
              alignCenter={true}
              allowFontScaling={true}
              color="#FFFFFF"
              fontFamily="BOLD"
              isUnderlined={false}
              isUppercase={false}
              maxFontSizeMultiplier={1.3}
              size="XXLARGE"
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "CalibreBold",
                    "fontSize": 48,
                    "justifyContent": "center",
                    "textAlign": "center",
                    "textDecorationColor": "#FFFFFF",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginVertical": 15,
                  },
                ]
              }
            >
              QUICK TOKEN REFILL
            </Text>
            <Text
              alignCenter={true}
              allowFontScaling={true}
              color="#FFFFFF"
              fontFamily="BOLD"
              isUnderlined={false}
              isUppercase={false}
              maxFontSizeMultiplier={1.3}
              size="SMALL"
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": "CalibreBold",
                    "fontSize": 27,
                    "justifyContent": "center",
                    "textAlign": "center",
                    "textDecorationColor": "#FFFFFF",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginVertical": 15,
                  },
                ]
              }
            >
              Refill your tokens without losing your spot in line!
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "height": 600,
                },
              ]
            }
          >
            <RCTScrollView
              contentContainerStyle={
                Object {
                  "paddingBottom": 32,
                }
              }
              data={null}
              disableVirtualization={false}
              getItem={[Function]}
              getItemCount={[Function]}
              horizontal={false}
              initialNumToRender={4}
              keyExtractor={[Function]}
              maxToRenderPerBatch={10}
              onContentSizeChange={[Function]}
              onEndReachedThreshold={2}
              onLayout={[Function]}
              onMomentumScrollEnd={[Function]}
              onScroll={[Function]}
              onScrollBeginDrag={[Function]}
              onScrollEndDrag={[Function]}
              removeClippedSubviews={false}
              renderItem={[Function]}
              scrollEventThrottle={50}
              stickyHeaderIndices={Array []}
              updateCellsBatchingPeriod={50}
              viewabilityConfigCallbackPairs={Array []}
              windowSize={21}
            >
              <View />
            </RCTScrollView>
          </View>
          <Text
            alignCenter={true}
            allowFontScaling={true}
            color="#FFFFFF"
            fontFamily="BOLD"
            isUnderlined={false}
            isUppercase={false}
            maxFontSizeMultiplier={1.3}
            size="SMALL"
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontFamily": "CalibreBold",
                  "fontSize": 27,
                  "justifyContent": "center",
                  "textAlign": "center",
                  "textDecorationColor": "#FFFFFF",
                  "textDecorationLine": "none",
                  "textDecorationStyle": "solid",
                  "textTransform": "none",
                },
                Object {
                  "marginVertical": 15,
                },
              ]
            }
          >
            Want to purchase a different pack?
          </Text>
          <View
            onLayout={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                  "marginHorizontal": 10,
                  "marginVertical": 10,
                },
              ]
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgba(96,202,142,1)",
                  "borderRadius": 88,
                  "height": 100,
                  "justifyContent": "center",
                  "marginTop": 0,
                  "opacity": 1,
                  "width": 500,
                }
              }
              testID="quick-token-store-button"
            >
              <View
                borderRadius={44}
                colorScheme="rgba(128,229,173,1)"
                height={50}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "rgba(128,229,173,1)",
                      "borderRadius": 88,
                      "height": 90,
                      "justifyContent": "center",
                      "width": 494,
                    },
                  ]
                }
                width={250}
              >
                <View
                  borderRadius={44}
                  colorScheme="rgba(114,213,158,1)"
                  height={50}
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "rgba(114,213,158,1)",
                        "borderRadius": 108,
                        "height": 86,
                        "justifyContent": "center",
                        "marginTop": 8,
                        "width": 494,
                      },
                    ]
                  }
                  width={250}
                >
                  <View
                    style={
                      Array [
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "justifyContent": "center",
                        },
                      ]
                    }
                  >
                    <Text
                      alignCenter={false}
                      allowFontScaling={true}
                      color="#FFFFFF"
                      fontFamily="MEDIUM"
                      isUnderlined={false}
                      isUppercase={false}
                      maxFontSizeMultiplier={1.3}
                      size="NORMAL"
                      style={
                        Array [
                          Object {
                            "color": "#FFFFFF",
                            "fontFamily": "Calibre-Medium",
                            "fontSize": 30,
                            "justifyContent": "center",
                            "textAlign": "left",
                            "textDecorationColor": "#FFFFFF",
                            "textDecorationLine": "none",
                            "textDecorationStyle": "solid",
                            "textTransform": "none",
                          },
                          Object {
                            "marginTop": 14,
                          },
                        ]
                      }
                    >
                      Head To Token Store
                    </Text>
                    <Image
                      source={1}
                      style={
                        Array [
                          Object {
                            "height": 40,
                            "marginLeft": 7.5,
                            "width": 40,
                          },
                        ]
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </BVLinearGradient>
    </View>
  </Modal>
</RCTSafeAreaView>
`;
